# My_money_smart

./: .gitignore  README.md  pyproject.toml  reqiremments.in
app/authentication/: exceptions.py  serializers.py  tests.py  urls.py  utils.py  views.py
app/finance/: apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
app/finance/migrations/: 0001_initial.py  0002_alter_myfinance_transaction_type.py  0003_alter_myfinance_date.py  0004_alter_myfinance_transaction_type.py  0005_alter_myfinance_transaction_type.py  0006_alter_myfinance_category.py  0007_remove_myfinance_category.py  0008_delete_mycategory.py
app/statistic/: apps.py  serializers.py  urls.py  views.py
app/user/: exсeptions.py  models.py  serializers.py  urls.py  views.py
app/user/migrations/: 0001_initial.py
app/user/templates/: final_password.html  password-reset-confirm.html  politics.html  reset-password.html
repository/: base_queryset.py
settings/: env_config.py  settings.py  urls.py
utils/: exceptions.py  suffix_router.py
